# YOLOv8-Segmentation

./: CMakeLists.txt  LICENSE  README.md  data.yaml  inference.cpp  inference.h  yoloNormal.yaml  yolov8Normal.cpp
Models/: yourtrainmodel
